--- a/ShopMartWebsite/ShopMartWebsite/Views/Category/_Listing.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Category/_Listing.cshtml
@@ -10,7 +10,7 @@
 
                 <th class="column-title">Tên danh mục </th>
                 <th class="column-title">Trạng thái </th>
-                <th class="column-title">Số lượng </th>
+                <th class="column-title">Số lượng sản phẩm </th>
                 <th class="column-title no-link last">
                     <span class="nobr">Action</span>
                 </th>
