--- a/ShopMartWebsite/ShopMartWebsite/Views/Home/Cart.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Home/Cart.cshtml
@@ -206,6 +206,11 @@
                     let tempItem = cart.find(item => item.id === id)
                     tempItem.quantity += 1;
                     console.log("Hang", tempItem)
+                    if (tempItem.quantity > tempItem.amount) {
+                        tempItem.quantity = tempItem.amount;
+                        alert("trong kho chỉ còn lại " + tempItem.quantity + " sản phẩm");
+                    }
+                        
                     Storage.saveCart(cart);
                     this.setCartValues(cart);
                     addAmount.previousElementSibling.innerText = tempItem.quantity;
@@ -215,7 +220,7 @@
                     let id = lowerAmount.dataset.id;
                     let tempItem = cart.find(item => item.id === id)
                     tempItem.quantity -= 1;
-                    if (tempItem.quantity > 0) {
+                    if (tempItem.quantity > 0 ) {
                         Storage.saveCart(cart);
                         this.setCartValues(cart);
                         lowerAmount.nextElementSibling.innerText = tempItem.quantity;
@@ -292,7 +297,7 @@
                     window.localStorage.removeItem('carts');
                     swal({
                         title: "Đặt hàng thành công!",
-                        text: "Shop sẽ liên lại qua Email!",
+                        text: "Shop sẽ liên lại sau!",
                         icon: "success",
                         buttons: "OK"
 
