--- a/ShopMartWebsite/ShopMartWebsite/Views/Product/_Action.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Product/_Action.cshtml
@@ -71,7 +71,10 @@
                     <label>Giá sản phẩm</label>
                     <input class="form-control" name="price" placeholder="giá..." value="@Model.price">
                 </div>
-                
+                <div class="form-group col-md-6">
+                    <label>Số lượng</label>
+                    <input class="form-control" name="amount" placeholder="1" value="@Model.amount">
+                </div>
 
                 <div class="form-group col-md-12">
                     <label>Mô tả sản phẩm</label>
