--- a/ShopMartWebsite/ShopMartWebsite/Views/Product/_Listing.cshtml
+++ b/ShopMartWebsite/ShopMartWebsite/Views/Product/_Listing.cshtml
@@ -15,6 +15,7 @@
                 <th class="column-title">Sản phẩm </th>
                 <th class="column-title">Giá </th>
                 <th class="column-title">Trạng thái </th>
+                <th class="column-title">Số lượng </th>
                 <th class="column-title">Size</th>
                 <th class="column-title">Color</th>
                 <th class="column-title">Danh mục</th>
@@ -37,6 +38,15 @@
                 <td class=" ">@item.name</td>
                 <td class=" ">@item.price</td>
                 <td class=" " style="color: green;">Hiển thị</td>
+
+                @if (item.amount < 1)
+                {
+                    <td class=" " style="color: red;">Hết hàng</td>
+                }
+                else
+                {
+                    <td class=" ">@item.amount</td>
+                }
                 <td class=" ">@item.size</td>
                 <td class=" ">@item.color</td>
                 @if (@item.category == null)
@@ -45,7 +55,7 @@
                 }
                 else
                 {
-                <td class="a-right a-right ">@item.category.name</td>
+                    <td class="a-right a-right ">@item.category.name</td>
                 }
                 <td class=" last">
                     <button data-href="@Url.Action("Viewss", "Product", new { ID = item.id })" class="data-btn-view btn btn-info" data-toggle="modal" data-target="#actionView"><i class="fas fa-eye"></i></button>
